fixed the findSimilarDocuments query and added endpoint /get-similar-documents